Fix T71250: ID user decrement error with ID properties in ViewLayer

Credit for the original patch goes to @scorpion81.