source/blender/blenkernel/intern/layer.c
@@ -239,7 +239,7 @@ void BKE_view_layer_free_ex(ViewLayer *view_layer, const bool do_id_user)
   BKE_freestyle_config_free(&view_layer->freestyle_config, do_id_user);
 
   if (view_layer->id_properties) {
-    IDP_FreeProperty(view_layer->id_properties);
+    IDP_FreeProperty_ex(view_layer->id_properties, do_id_user);
   }
 
   MEM_SAFE_FREE(view_layer->object_bases_array);
